--- a/NineX.theme.css
+++ b/NineX.theme.css
@@ -15,6 +15,6 @@
 /* See https://github.com/Saltssaumure/w9x-discord-theme#customisation for customisation settings. */
 :root {
     --w9x-background-image: none;
-    --w9x-background-color: #008080;
-    --w9x-start-text: "Windows95";
+    --w9x-background-color: #5d438a;
+    --w9x-start-text: "AzaleaP :3";
 }
